# spy2ytb

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
spy2ytb/: __init__.py  __main__.py  cli.py  downloader.py  metadata.py  spotify.py  utils.py
